Closed Bug 1662859 Opened 5 years ago Closed 5 years ago

The drawing is not updating correctly

Categories

(Core :: Web Painting, defect)

80 Branch
Desktop
All
defect

Tracking

()

VERIFIED FIXED
83 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox80 --- wontfix
firefox81 --- wontfix
firefox82 --- wontfix
firefox83 --- verified

People

(Reporter: andro.marian.v94, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached file popup.zip

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:80.0) Gecko/20100101 Firefox/80.0

Steps to reproduce:

Is a Zip with a HTML, CSS and a Video to see the problem of the Drawing.
Not sure why is the problem, i think something with overflow: hidden

OS: Unspecified → Windows 10
Hardware: Unspecified → Desktop
Attached image Screenshot (4).png

Seams in others works fine

Attached image Screenshot (6).png

Latest seams good to me. Maybe will stay fixed to next release.

Hi,

Thank you for taking the time to submit this bug report. Testing was done on Windows 10 x64bit and MacOS 10.14 with Firefox Nightly 82.0a1 (20200908095243), Beta 81.0b7 (20200906164749), and Release 80.0.1 (20200831163820). I've managed to reproduce the issue on the Mac device with the Beta and Release versions quite quickly, while on Nightly and on Windows (with all versions) I couldn't reproduce it at all. Please let me know, if there are other useful steps that can be made in reproducing the problem.

I've assigned a component so our developers can take a look. If you think the selected component is not suitable, please feel free to change it.

Status: UNCONFIRMED → NEW
Component: Untriaged → Layout: Form Controls
Ever confirmed: true
Product: Firefox → Core

I can reproduce the issue on Nightly82.0a1 Windows10 if Wrbrender is disabled (i.e. Direct3D 11 (Advanced Layers)).

Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f6df6a982ee9510ca32dd3afa52dfe9f8c3586a3&tochange=37bd1d7f02af4f7c57a274efd48706526a8b01a9

Suspect:6586a6e92c6a31ba5131e352d486780934d77e87 Doug Thayer — Bug 1471381 - Don't give up on rounded rects in DisplayItemClip r=mattwoodrow

Component: Layout: Form Controls → Web Painting
Regressed by: 1471381
Has Regression Range: --- → yes

Based on Comment 4, I'm removing the regressionwindow-wanted keyword.

Hi Doug, can you take a look?

Flags: needinfo?(dothayer)

Managed to reproduce the issue on Windows 10 x64bit and MacOS 10.14 with Nightly 82.0a1 (20200909093957), Beta 81.0b8 (20200908191057), and Release 80.0.1 (20200831163820) after the "gfx.webrender.force-disabled" pref was set to "true".

OS: Windows 10 → All

Oof. Unfortunately, while I wrote this code, it's been a long time since I've been in there and I'm not the best person to debug retained display list issues. Also, I can't seem to reproduce this on my end (Windows 10) even with WebRender disabled?

Matt, do you know who might have both the time and the familiarity to look at this?

Flags: needinfo?(dothayer) → needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7f5281561e9e Use the full height (including the rounded areas) when invalidating Y-axis changes to a rounded rectangle. r=dthayer
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Reproduced the initial issue in Release 82.0 using Windows 10.
Verified - Fixed in latest Nightly 84.0a1 (2020-10-22) and Beta 83.0b3 (build id: 20201022171613).

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: