Bug 1662859 - Use the full height (including the rounded areas) when invalidating Y-axis changes to a rounded rectangle. r=dthayer

Differential Revision: https://phabricator.services.mozilla.com/D92359