layout/painting/DisplayItemClip.cpp
@@ -377,15 +377,14 @@ static void AccumulateRoundedRectDifference(
     r.Or(r, nsRect(minLeft, highestAdjustedBottom, maxRight - minLeft,
                    lowestBottom - highestAdjustedBottom));
   }
-  // Then, or with the X delta rects, narrow along the Y axis
+  // Then, or with the X delta rects, wide along the Y axis
   if (rect1.X() != rect2.X()) {
-    r.Or(r, nsRect(minLeft, lowestAdjustedTop, maxAdjustedLeft - minLeft,
-                   highestAdjustedBottom - lowestAdjustedTop));
+    r.Or(r, nsRect(minLeft, highestTop, maxAdjustedLeft - minLeft,
+                   lowestBottom - highestTop));
   }
   if (rect1.XMost() != rect2.XMost()) {
-    r.Or(r, nsRect(minAdjustedRight, lowestAdjustedTop,
-                   maxRight - minAdjustedRight,
-                   highestAdjustedBottom - lowestAdjustedTop));
+    r.Or(r, nsRect(minAdjustedRight, highestTop, maxRight - minAdjustedRight,
+                   lowestBottom - highestTop));
   }
 
   r.And(r, aBounds.Union(aOtherBounds));
